@@ -37,14 +37,12 @@ $tpl->define_dynamic('hosting_plans', 'page');
 $theme_color = Config::get('USER_INITIAL_THEME');
 
 $tpl->assign(
-		array(
-			'TR_ADMIN_EDIT_USER_PAGE_TITLE' => tr('ispCP - Admin/Manage users/Edit Administrator'),
-			'THEME_COLOR_PATH' => "../themes/$theme_color",
-			'THEME_CHARSET' => tr('encoding'),
-			'ISP_LOGO' => get_logo($_SESSION['user_id']),
-
-			)
-	);
+	array(
+		'THEME_COLOR_PATH'	=> "../themes/$theme_color",
+		'THEME_CHARSET'		=> tr('encoding'),
+		'ISP_LOGO'			=> get_logo($_SESSION['user_id']),
+	)
+);
 
 function update_data(&$sql) {
 	global $edit_id;
@@ -53,39 +51,39 @@ function update_data(&$sql) {
 		if (check_user_data()) {
 			$user_id = $_SESSION['user_id'];
 
-			$fname = clean_input($_POST['fname']);
-			$lname = clean_input($_POST['lname']);
-			$firm = clean_input($_POST['firm']);
-			$gender = clean_input($_POST['gender']);
-			$zip = clean_input($_POST['zip']);
-			$city = clean_input($_POST['city']);
-			$country = clean_input($_POST['country']);
-			$email = clean_input($_POST['email']);
-			$phone = clean_input($_POST['phone']);
-			$fax = clean_input($_POST['fax']);
-			$street1 = clean_input($_POST['street1']);
-			$street2 = clean_input($_POST['street2']);
+			$fname		= clean_input($_POST['fname']);
+			$lname		= clean_input($_POST['lname']);
+			$firm		= clean_input($_POST['firm']);
+			$gender		= clean_input($_POST['gender']);
+			$zip		= clean_input($_POST['zip']);
+			$city		= clean_input($_POST['city']);
+			$country	= clean_input($_POST['country']);
+			$email		= clean_input($_POST['email']);
+			$phone		= clean_input($_POST['phone']);
+			$fax		= clean_input($_POST['fax']);
+			$street1	= clean_input($_POST['street1']);
+			$street2	= clean_input($_POST['street2']);
 
 			if (empty($_POST['pass'])) {
-				$query = <<<SQL_QUERY
-                        update
-                            admin
-                        set
-                            fname = ?,
-                            lname = ?,
-                            firm = ?,
-                            zip = ?,
-                            city = ?,
-                            country = ?,
-                            email = ?,
-                            phone = ?,
-                            fax = ?,
-                            street1 = ?,
-                            street2 = ?,
-                            gender = ?
-                    where
-                        admin_id = ?
-SQL_QUERY;
+				$query = "
+					UPDATE
+						`admin`
+					SET
+						`fname` = ?,
+						`lname` = ?,
+						`firm` = ?,
+						`zip` = ?,
+						`city` = ?,
+						`country` = ?,
+						`email` = ?,
+						`phone` = ?,
+						`fax` = ?,
+						`street1` = ?,
+						`street2` = ?,
+						`gender` = ?
+					WHERE
+						`admin_id` = ?
+				";
 				$rs = exec_query($sql, $query, array($fname,
 						$lname,
 						$firm,
@@ -122,26 +120,26 @@ SQL_QUERY;
 
 				$upass = crypt_user_pass($_POST['pass']);
 
-				$query = <<<SQL_QUERY
-                        update
-                            admin
-                        set
-                            admin_pass = ?,
-                            fname = ?,
-                            lname = ?,
-                            firm = ?,
-                            zip = ?,
-                            city = ?,
-                            country = ?,
-                            email = ?,
-                            phone = ?,
-                            fax = ?,
-                            street1 = ?,
-                            street2 = ?,
-                            gender = ?
-                        where
-                            admin_id = ?
-SQL_QUERY;
+				$query = "
+					UPDATE
+						`admin`
+					SET
+						`admin_pass` = ?,
+						`fname` = ?,
+						`lname` = ?,
+						`firm` = ?,
+						`zip` = ?,
+						`city` = ?,
+						`country` = ?,
+						`email` = ?,
+						`phone` = ?,
+						`fax` = ?,
+						`street1` = ?,
+						`street2` = ?,
+						`gender` = ?
+					WHERE
+						`admin_id` = ?
+				";
 
 				$rs = exec_query($sql, $query, array($upass,
 						$fname,
@@ -161,12 +159,12 @@ SQL_QUERY;
 				// Kill any existing session of the edited user
 
 				$admin_name = get_user_name($edit_id);
-				$query = <<<SQL_QUERY
-                    delete from
-                        login
-                    where
-                        user_name = ?
-SQL_QUERY;
+				$query = "
+					DELETE FROM
+						`login`
+					WHERE
+						`user_name` = ?
+				";
 
 				$rs = exec_query($sql, $query, array($admin_name));
 				if ($rs->RecordCount() != 0) {
@@ -233,26 +231,27 @@ if ($edit_id == $_SESSION['user_id']) {
  *
  */
 
-$query = <<<SQL_QUERY
-    select
-        admin_name,
-        fname,
-        lname,
-        firm,
-        zip,
-        city,
-        country,
-        phone,
-        fax,
-        street1,
-        street2,
-        email,
-        gender
-    from
-        admin
-    where
-        admin_id = ?
-SQL_QUERY;
+$query = "
+	SELECT
+		`admin_name`,
+		`admin_type`,
+		`fname`,
+		`lname`,
+		`firm`,
+		`zip`,
+		`city`,
+		`country`,
+		`phone`,
+		`fax`,
+		`street1`,
+		`street2`,
+		`email`,
+		`gender`
+	FROM
+		`admin`
+	WHERE
+		`admin_id` = ?
+";
 
 $rs = exec_query($sql, $query, array($edit_id));
 
@@ -275,53 +274,53 @@ if (isset($_POST['genpass'])) {
 }
 
 $tpl->assign(
-		array(
-			'TR_EMPTY_OR_WORNG_DATA' => tr('Empty data or wrong field!'),
-			'TR_PASSWORD_NOT_MATCH' => tr("Passwords don't match!"),
-			'TR_EDIT_ADMIN' => tr('Edit admin'),
-			'TR_CORE_DATA' => tr('Core data'),
-			'TR_USERNAME' => tr('Username'),
-			'TR_PASSWORD' => tr('Password'),
-			'TR_PASSWORD_REPEAT' => tr('Repeat password'),
-			'TR_EMAIL' => tr('Email'),
-			'TR_ADDITIONAL_DATA' => tr('Additional data'),
-			'TR_FIRST_NAME' => tr('First name'),
-			'TR_LAST_NAME' => tr('Last name'),
-			'TR_COMPANY' => tr('Company'),
-			'TR_ZIP_POSTAL_CODE' => tr('Zip/Postal code'),
-			'TR_CITY' => tr('City'),
-			'TR_COUNTRY' => tr('Country'),
-			'TR_STREET_1' => tr('Street 1'),
-			'TR_STREET_2' => tr('Street 2'),
-			'TR_PHONE' => tr('Phone'),
-			'TR_FAX' => tr('Fax'),
-			'TR_PHONE' => tr('Phone'),
-			'TR_GENDER' => tr('Gender'),
-			'TR_MALE' => tr('Male'),
-			'TR_FEMALE' => tr('Female'),
-			'TR_UNKNOWN' => tr('Unknown'),
-			'TR_UPDATE' => tr('Update'),
-			'TR_SEND_DATA' => tr('Send new login data'),
-			'TR_PASSWORD_GENERATE' => tr('Generate password'),
-
-			'FIRST_NAME' => $rs->fields['fname'],
-			'LAST_NAME' => $rs->fields['lname'],
-			'FIRM' => $rs->fields['firm'],
-			'ZIP' => $rs->fields['zip'],
-			'CITY' => $rs->fields['city'],
-			'COUNTRY' => $rs->fields['country'],
-			'STREET_1' => $rs->fields['street1'],
-			'STREET_2' => $rs->fields['street2'],
-			'PHONE' => $rs->fields['phone'],
-			'FAX' => $rs->fields['fax'],
-			'USERNAME' => $admin_name,
-			'EMAIL' => $rs->fields['email'],
-			'VL_MALE' => (($rs->fields['gender'] === 'M') ? 'selected="selected"' : ''),
-			'VL_FEMALE' => (($rs->fields['gender'] === 'F') ? 'selected="selected"' : ''),
-			'VL_UNKNOWN' => ((($rs->fields['gender'] === 'U') || (empty($rs->fields['gender']))) ? 'selected="selected"' : ''),
-			'EDIT_ID' => $edit_id
-			)
-	);
+	array(
+		'TR_ADMIN_EDIT_USER_PAGE_TITLE'	=> ($rs->fields['admin_type']=='admin'?tr('ispCP - Admin/Manage users/Edit Administrator'):tr('ispCP - Admin/Manage users/Edit User')),
+		'TR_EMPTY_OR_WORNG_DATA'		=> tr('Empty data or wrong field!'),
+		'TR_PASSWORD_NOT_MATCH'			=> tr("Passwords don't match!"),
+		'TR_EDIT_ADMIN'					=> ($rs->fields['admin_type']=='admin' ?tr('Edit admin'):tr('Edit user')),
+		'TR_CORE_DATA'					=> tr('Core data'),
+		'TR_USERNAME'					=> tr('Username'),
+		'TR_PASSWORD'					=> tr('Password'),
+		'TR_PASSWORD_REPEAT'			=> tr('Repeat password'),
+		'TR_EMAIL'						=> tr('Email'),
+		'TR_ADDITIONAL_DATA'			=> tr('Additional data'),
+		'TR_FIRST_NAME'					=> tr('First name'),
+		'TR_LAST_NAME'					=> tr('Last name'),
+		'TR_COMPANY'					=> tr('Company'),
+		'TR_ZIP_POSTAL_CODE'			=> tr('Zip/Postal code'),
+		'TR_CITY'						=> tr('City'),
+		'TR_COUNTRY'					=> tr('Country'),
+		'TR_STREET_1'					=> tr('Street 1'),
+		'TR_STREET_2'					=> tr('Street 2'),
+		'TR_PHONE'						=> tr('Phone'),
+		'TR_FAX'						=> tr('Fax'),
+		'TR_PHONE'						=> tr('Phone'),
+		'TR_GENDER'						=> tr('Gender'),
+		'TR_MALE'						=> tr('Male'),
+		'TR_FEMALE'						=> tr('Female'),
+		'TR_UNKNOWN'					=> tr('Unknown'),
+		'TR_UPDATE'						=> tr('Update'),
+		'TR_SEND_DATA'					=> tr('Send new login data'),
+		'TR_PASSWORD_GENERATE'			=> tr('Generate password'),
+		'FIRST_NAME'					=> $rs->fields['fname'],
+		'LAST_NAME'						=> $rs->fields['lname'],
+		'FIRM'							=> $rs->fields['firm'],
+		'ZIP'							=> $rs->fields['zip'],
+		'CITY'							=> $rs->fields['city'],
+		'COUNTRY'						=> $rs->fields['country'],
+		'STREET_1'						=> $rs->fields['street1'],
+		'STREET_2'						=> $rs->fields['street2'],
+		'PHONE'							=> $rs->fields['phone'],
+		'FAX'							=> $rs->fields['fax'],
+		'USERNAME'						=> $admin_name,
+		'EMAIL'							=> $rs->fields['email'],
+		'VL_MALE'						=> (($rs->fields['gender'] === 'M') ? 'selected="selected"' : ''),
+		'VL_FEMALE'						=> (($rs->fields['gender'] === 'F') ? 'selected="selected"' : ''),
+		'VL_UNKNOWN'					=> ((($rs->fields['gender'] === 'U') || (empty($rs->fields['gender']))) ? 'selected="selected"' : ''),
+		'EDIT_ID'						=> $edit_id
+	)
+);
 
 gen_page_message($tpl);
 
